<resources>
    <string name="app_name">thinkD</string>
    <string name="login">로그인</string>
    <string name="sign_up">회원가입</string>
    <string name="id">아이디</string>
    <string name="password">비밀번호</string>
    <string name="password_check">비밀번호 확인</string>
    <string name="name">이름</string>
    <string name="gender">성별</string>
    <string name="men">남자</string>
    <string name="women">여자</string>
    <string name="cancel">취소</string>
    <string name="ok">확인</string>
    <string name="register_failed">회원가입 실패</string>
    <string name="popup_empty_id">아이디를 입력해주세요.</string>
    <string name="popup_empty_pw">비밀번호를 입력해주세요.</string>
    <string name="popup_diff_pwcheck">입력한 비밀번호가 서로 다릅니다.</string>
    <string name="popup_empty_name">이름을 입력해주세요.</string>
    <string name="popup_empty_gender">성별을 선택해주세요.</string>
    <string name="age">나이</string>
    <string name="popup_empty_age">나이를 선택해주세요</string>
    <string name="login_failed">로그인 실패</string>
    <string name="coupon_point">할인쿠폰/포인트</string>
</resources>