<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_id_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:hint="@string/id"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#8D6E63"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/et_pw_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#8D6E63"
        app:layout_constraintEnd_toEndOf="@+id/et_id_reg"
        app:layout_constraintStart_toStartOf="@+id/et_id_reg"
        app:layout_constraintTop_toBottomOf="@+id/et_id_reg"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/et_pwcheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/password_check"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#8D6E63"
        app:layout_constraintEnd_toEndOf="@+id/et_pw_reg"
        app:layout_constraintStart_toStartOf="@+id/et_pw_reg"
        app:layout_constraintTop_toBottomOf="@+id/et_pw_reg"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/et_name_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#8D6E63"
        app:layout_constraintEnd_toEndOf="@+id/et_pwcheck"
        app:layout_constraintStart_toStartOf="@+id/et_pwcheck"
        app:layout_constraintTop_toBottomOf="@+id/et_pwcheck"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/tv_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id"
        app:layout_constraintBottom_toBottomOf="@+id/et_id_reg"
        app:layout_constraintEnd_toStartOf="@+id/et_id_reg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/et_id_reg" />

    <TextView
        android:id="@+id/tv_pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        app:layout_constraintBottom_toBottomOf="@+id/et_pw_reg"
        app:layout_constraintEnd_toStartOf="@+id/et_pw_reg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/et_pw_reg" />

    <TextView
        android:id="@+id/tv_pwcheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_check"
        app:layout_constraintBottom_toBottomOf="@+id/et_pwcheck"
        app:layout_constraintEnd_toStartOf="@+id/et_pwcheck"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/et_pwcheck" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        app:layout_constraintBottom_toBottomOf="@+id/et_name_reg"
        app:layout_constraintEnd_toStartOf="@+id/et_name_reg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/et_name_reg" />

    <TextView
        android:id="@+id/tv_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        app:layout_constraintBottom_toBottomOf="@+id/group_gender"
        app:layout_constraintEnd_toStartOf="@+id/group_gender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/group_gender" />

    <RadioGroup
        android:id="@+id/group_gender"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/et_name_reg"
        app:layout_constraintStart_toStartOf="@+id/et_name_reg"
        app:layout_constraintTop_toBottomOf="@+id/et_name_reg">

        <RadioButton
            android:id="@+id/rbt_men"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/men" />

        <RadioButton
            android:id="@+id/rbt_women"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/women" />
    </RadioGroup>

    <Button
        android:id="@+id/bt_register_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginBottom="74dp"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/bt_cancel_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="100dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="@+id/bt_register_reg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bt_register_reg" />

    <TextView
        android:id="@+id/tv_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age"
        app:layout_constraintBottom_toBottomOf="@+id/spin_age"
        app:layout_constraintEnd_toStartOf="@+id/spin_age"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/spin_age" />

    <Spinner
        android:id="@+id/spin_age"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/group_gender"
        app:layout_constraintStart_toStartOf="@+id/group_gender"
        app:layout_constraintTop_toBottomOf="@+id/group_gender" />

</androidx.constraintlayout.widget.ConstraintLayout>